crates/specline-mcp/tests/snapshots/snapshots__keel_link.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "Linked [id] implements [id]",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "link": {
      "anchor": "",
      "audit": {
        "archived_at": null,
        "created_at": "[timestamp]",
        "created_by": "claude",
        "session_id": "ses_snapshot",
        "surface": null,
        "updated_at": "[timestamp]",
        "updated_by": "claude",
        "version": 1
      },
      "from_id": "[id]",
      "from_type": "task",
      "id": "[id]",
      "note": null,
      "project_id": "[id]",
      "rel": "implements",
      "to_id": "[id]",
      "to_type": "spec"
    }
  }
}
