crates/specline-mcp/tests/snapshots/snapshots__specline_claim.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "HARB-1 is yours — Dedupe usage events by idempotency key.",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "reference": "HARB-1",
    "task": {
      "archived": false,
      "audit": {
        "archived_at": null,
        "created_at": "[timestamp]",
        "created_by": "claude",
        "session_id": "ses_snapshot",
        "surface": null,
        "updated_at": "[timestamp]",
        "updated_by": "claude",
        "version": 2
      },
      "body": null,
      "claimed_at": "[timestamp]",
      "claimed_by": "ses_snapshot",
      "close_message": null,
      "close_reason": null,
      "closed_at": null,
      "evidence": [],
      "external_refs": [],
      "id": "[id]",
      "idempotency_key": "[hash]",
      "kind": "task",
      "labels": [],
      "milestone_id": null,
      "number": 1,
      "parent_id": null,
      "priority": "p2",
      "project_id": "[id]",
      "rank": 1.0,
      "status": "in_progress",
      "summary": "A row this test needs in the store.",
      "title": "Dedupe usage events by idempotency key",
      "type": "task",
      "version": 2
    },
    "took_over_from": null
  }
}
