crates/specline-mcp/tests/snapshots/snapshots__specline_create.snap
---
source: crates/specline-mcp/tests/snapshots.rs
expression: result
---
{
  "content": [
    {
      "text": "Created decision “Aggregate hourly, not per-minute” — [id]",
      "type": "text"
    }
  ],
  "isError": false,
  "structuredContent": {
    "created": true,
    "document": {
      "author": "claude",
      "body": "## Decision\n\nHourly buckets.\n",
      "body_hash": "[hash][hash]",
      "created_at": "[timestamp]",
      "doc_id": "[id]",
      "embedding": null,
      "embedding_model": "bge-small-en-v1.5",
      "embedding_version": 1,
      "entity_id": "[id]",
      "entity_type": "decision",
      "media_ref": null,
      "parent_version": null,
      "project_id": "[id]",
      "session_id": "ses_snapshot",
      "status": "current",
      "surface": null,
      "title": "Aggregate hourly, not per-minute",
      "version": 1
    },
    "entity": {
      "archived": false,
      "audit": {
        "archived_at": null,
        "created_at": "[timestamp]",
        "created_by": "claude",
        "session_id": "ses_snapshot",
        "surface": null,
        "updated_at": "[timestamp]",
        "updated_by": "claude",
        "version": 1
      },
      "current_doc_version": 1,
      "decided_at": null,
      "id": "[id]",
      "idempotency_key": "[hash]",
      "mirror_path": null,
      "number": 1,
      "project_id": "[id]",
      "status": "proposed",
      "title": "Aggregate hourly, not per-minute",
      "type": "decision",
      "version": 1
    },
    "resolved_from": null,
    "seeded_term": null,
    "style_warnings": []
  }
}
